fix nikel tour, close button on mobile menu

--- a/src/containers/Sidebar/styles.scss
+++ b/src/containers/Sidebar/styles.scss
@@ -14,6 +14,8 @@
   margin-left: 40px;
   background: url(/assets/img/login/projecai-logo.png);
   background-size: cover;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .main-menu {
